--- a/space-x-client/src/molecules/container/container.scss
+++ b/space-x-client/src/molecules/container/container.scss
@@ -30,6 +30,7 @@ $blockName: '.container';
     &__card-header {
         background-color: $grey;
         margin: 10px 10px 20px;
+        text-align: center;
     }
 
     &__card-image {
